Fix logo on safari

--- a/src/components/Header/styles.sass
+++ b/src/components/Header/styles.sass
@@ -20,6 +20,8 @@
 
 .header__logo
     user-select: none
+    fill: $color-logo
+    -webkit-transform: translate3d(0,0,0)
 
 .header__logo_small
     width: 30vw
